# du-aryi

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: ReadComPort.c  SImuliert.c  datenbank.c  datenbank.h  fun.c  fun.h  funktionen.h  lookup.c  lookup.h  main.c  schreibliste.c  schreibliste.h
